--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "html-pdf": "^3.0.1",
     "mysql2": "^3.9.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
